<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fl_login_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteToo"
    android:orientation="vertical">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_centerInParent="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/app_name"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            android:src="@mipmap/matrimony_three" />


        <TextView

            android:id="@+id/t"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/otp_resigtered"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/txt_view_small" />


        <EditText

            android:id="@+id/edt_login_password"
            style="@style/edtiText"
            android:layout_marginTop="10dp"
            android:background="@drawable/rectangle"
            android:drawableRight="@android:drawable/ic_menu_edit"
            android:hint="@string/mobile_otp"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:textColorHint="@color/colorPrimaryDark"
            android:textSize="@dimen/txt_view_normal" />


        <TextView
            android:id="@+id/txt_resend_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="5dp"
            android:gravity="right"
            android:padding="5dp"
            android:text="@string/resend_otp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/txt_view_small"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_login_signin"
            style="@style/button"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/verify" />



    </LinearLayout>

</LinearLayout>


