<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fl_login_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteToo"
    android:orientation="vertical">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_centerInParent="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/app_name"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            android:src="@mipmap/matrimony_three" />

        <EditText
            android:id="@+id/edt_mobile_number"
            style="@style/edtiText"
            android:layout_marginTop="15dp"
            android:background="@drawable/rectangle"
            android:drawableRight="@android:drawable/ic_menu_edit"
            android:hint="@string/mobile_number"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:textColorHint="@color/colorPrimaryDark"
            android:textSize="@dimen/txt_view_normal" />


        <EditText
            android:id="@+id/edt_mobile_otp"
            style="@style/edtiText"
            android:layout_marginTop="10dp"
            android:background="@drawable/rectangle"
            android:drawableRight="@android:drawable/ic_menu_edit"
            android:hint="@string/mobile_otp"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:textColorHint="@color/colorPrimaryDark"
            android:textSize="@dimen/txt_view_normal" />




        <Button
            android:id="@+id/btn_forgot"
            style="@style/button"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="25dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/forgot" />



    </LinearLayout>

</LinearLayout>


