<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fl_login_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteToo"
    android:orientation="vertical">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_centerInParent="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/app_name"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            android:src="@mipmap/matrimony_three" />

        <com.xwray.passwordview.PasswordView
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/rectangle"
            android:drawableRight="@android:drawable/ic_menu_edit"
            android:fontFamily="sans-serif"
            android:hint="@string/new_password"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColorHint="@color/colorPrimaryDark"
            android:textSize="@dimen/txt_view_normal"
            app:useStrikeThrough="true" />

        <com.xwray.passwordview.PasswordView
            android:id="@+id/edt_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/rectangle"
            android:drawableRight="@android:drawable/ic_menu_edit"
            android:fontFamily="sans-serif"
            android:hint="@string/confirm_password"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColorHint="@color/colorPrimaryDark"
            android:textSize="@dimen/txt_view_normal"
            app:useStrikeThrough="true" />




        <Button
            android:id="@+id/btn_login_signin"
            style="@style/button"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="25dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/change_password" />



    </LinearLayout>

</LinearLayout>


